--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -139,6 +139,24 @@
         android:title="@string/tap_to_wake"
         android:summary="@string/tap_to_wake_summary" />
 
+    <PreferenceCategory
+         android:key="dtts_category"
+         android:title="@string/dtts_category_header" >
+
+        <com.android.settings.simplx.preferences.SystemSettingSwitchPreference
+            android:key="double_tap_sleep_gesture"
+            android:title="@string/double_tap_to_sleep_title"
+            android:summary="@string/double_tap_to_sleep_summary"
+            android:defaultValue="true" />
+
+        <com.android.settings.simplx.preferences.SystemSettingSwitchPreference
+            android:key="double_tap_sleep_lockscreen"
+            android:title="@string/double_tap_to_sleep_lockscreen_title"
+            android:summary="@string/double_tap_to_sleep_lockscreen_summary"
+            android:defaultValue="true" />
+
+    </PreferenceCategory>
+
     <ListPreference
         android:key="theme"
         android:title="@string/device_theme"
