--- a/res/values/simplx_strings.xml
+++ b/res/values/simplx_strings.xml
@@ -24,6 +24,12 @@
     <string name="double_tap_to_sleep_title">Status bar</string>
     <string name="double_tap_to_sleep_summary">Double-tap status bar to put the device to sleep</string>
 
+    <!-- Incall vibrate options -->
+    <string name="incall_vibration_category">In-call vibration options</string>
+    <string name="incall_vibrate_connect_title">Vibrate on connect</string>
+    <string name="incall_vibrate_call_wait_title">Vibrate on call waiting</string>
+    <string name="incall_vibrate_disconnect_title">Vibrate on disconnect</string>
+
     <!-- Themes customisation -->
     <string name="theme_customization_systemui_title">Color bucket</string>
     <string name="theme_customization_accent_color_title">Accent color</string>
