--- a/res/xml/gestures.xml
+++ b/res/xml/gestures.xml
@@ -85,13 +85,13 @@
          android:key="dtts_category"
          android:title="@string/dtts_category_header" >
 
-        <com.android.settings.simplx.preferences.SystemSettingSwitchPreference
+        <com.android.settings.sosp.preferences.SystemSettingSwitchPreference
             android:key="double_tap_sleep_gesture"
             android:title="@string/double_tap_to_sleep_title"
             android:summary="@string/double_tap_to_sleep_summary"
             android:defaultValue="true" />
 
-        <com.android.settings.simplx.preferences.SystemSettingSwitchPreference
+        <com.android.settings.sosp.preferences.SystemSettingSwitchPreference
             android:key="double_tap_sleep_lockscreen"
             android:title="@string/double_tap_to_sleep_lockscreen_title"
             android:summary="@string/double_tap_to_sleep_lockscreen_summary"
@@ -103,7 +103,7 @@
          android:key="ss_category"
          android:title="@string/ss_category_header" >
 
-        <com.android.settings.simplx.preferences.SystemSettingSwitchPreference
+        <com.android.settings.sosp.preferences.SystemSettingSwitchPreference
         android:key="three_finger_gesture"	
         android:title="@string/three_finger_gesture"	
         android:summary="@string/three_finger_gesture_summary"	
