--- a/res/xml/network_and_internet_v2.xml
+++ b/res/xml/network_and_internet_v2.xml
@@ -54,7 +54,7 @@
 
     <Preference
         android:key="traffic"
-        android:fragment="com.android.settings.simplx.NetworkTraffic"
+        android:fragment="com.android.settings.sosp.NetworkTraffic"
         android:order="-10"
         android:icon="@drawable/ic_network_traffic"
         android:title="@string/traffic_title" />
