--- a/res/xml/network_traffic.xml
+++ b/res/xml/network_traffic.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Copyright (C) 2020 Simplx AOSP Project
+<!-- Copyright (C) 2020 SOSP-OS Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -19,19 +19,19 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
-    <com.android.settings.simplx.preferences.SystemSettingSwitchPreference
+    <com.android.settings.sosp.preferences.SystemSettingSwitchPreference
         android:key="network_traffic_state"
         android:title="@string/network_traffic_state_title"
         android:defaultValue="true" />
 
-     <com.android.settings.simplx.preferences.CustomSeekBarPreference
+     <com.android.settings.sosp.preferences.CustomSeekBarPreference
         android:key="network_traffic_autohide_threshold"
         android:title="@string/network_traffic_autohide_threshold_title"
         android:max="10"
         settings:min="0"
         settings:units="" />
 
-    <com.android.settings.simplx.preferences.SystemSettingSwitchPreference
+    <com.android.settings.sosp.preferences.SystemSettingSwitchPreference
         android:key="network_traffic_hidearrow"
         android:title="@string/network_traffic_hidearrow"
         android:summary="@string/network_traffic_hidearrow_summary"
