--- a/res/xml/sound_settings.xml
+++ b/res/xml/sound_settings.xml
@@ -147,17 +147,17 @@
         android:title="@string/incall_vibration_category" 
         android:order="-60">
 
-         <com.android.settings.simplx.preferences.SystemSettingSwitchPreference
+         <com.android.settings.sosp.preferences.SystemSettingSwitchPreference
             android:key="vibrate_on_connect"
             android:title="@string/incall_vibrate_connect_title"
             android:defaultValue="false" />
 
-         <com.android.settings.simplx.preferences.SystemSettingSwitchPreference
+         <com.android.settings.sosp.preferences.SystemSettingSwitchPreference
             android:key="vibrate_on_callwaiting"
             android:title="@string/incall_vibrate_call_wait_title"
             android:defaultValue="false" />
 
-         <com.android.settings.simplx.preferences.SystemSettingSwitchPreference
+         <com.android.settings.sosp.preferences.SystemSettingSwitchPreference
             android:key="vibrate_on_disconnect"
             android:title="@string/incall_vibrate_disconnect_title"
             android:defaultValue="false" />
